<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HistorySettingsActivity" >

    <CheckBox
        android:id="@+id/cbSaveHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/save_history" />

    <Button
        android:id="@+id/btnDeleteHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/delete_history" />

    <CheckBox
        android:id="@+id/cbEncryptHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbSaveHistory"
        android:layout_below="@+id/cbSaveHistory"
        android:layout_marginTop="46dp"
        android:text="@string/encrypt_history" />

    <LinearLayout
        android:id="@+id/llDaysHistoryFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbEncryptHistory"
        android:layout_below="@+id/cbSaveHistory"
        android:visibility="visible" >

        <EditText
            android:id="@+id/txtDaysHistory"
            android:layout_width="64sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3" />

        <TextView
            android:id="@+id/tvDaysHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/days_history"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txt0meansInfinite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_means_infinite"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSetPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cbEncryptHistory"
        android:layout_below="@+id/cbEncryptHistory"
        android:layout_marginTop="27dp"
        android:text="@string/set_password" />

    <Button
        android:id="@+id/btnClearPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSetPassword"
        android:layout_below="@+id/btnSetPassword"
        android:layout_marginTop="20dp"
        android:text="@string/clear_password" />

</RelativeLayout>